@@ -17,6 +17,8 @@
 - Fixed possible crash in mssql_fetch_batch(). (Kalle)
 - Fixed inconsistent backlog default value (-1) in FPM on many systems. (fat)
 
+- Fixed bug #52725 (gcc builtin atomic functions were sometimes used when they
+  were not available). (fat)
 - Fixed bug #52745 (Binding params doesn't work when selecting a date inside a
   CASE-WHEN). (Andrey)
 - Fixed bug #52699 (PDO bindValue writes long int 32bit enum).
